Added STOP Mode sleep and wakeup on RTC wakeup event

--- a/lcd_test_1.ioc
+++ b/lcd_test_1.ioc
@@ -14,9 +14,10 @@ Mcu.Family=STM32L0
 Mcu.IP0=LCD
 Mcu.IP1=NVIC
 Mcu.IP2=RCC
-Mcu.IP3=SYS
-Mcu.IP4=USART2
-Mcu.IPNb=5
+Mcu.IP3=RTC
+Mcu.IP4=SYS
+Mcu.IP5=USART2
+Mcu.IPNb=6
 Mcu.Name=STM32L053R(6-8)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
@@ -51,14 +52,17 @@ Mcu.Pin34=PB4
 Mcu.Pin35=PB5
 Mcu.Pin36=PB8
 Mcu.Pin37=PB9
-Mcu.Pin38=VP_SYS_VS_Systick
+Mcu.Pin38=VP_RTC_VS_RTC_Activate
+Mcu.Pin39=VP_RTC_VS_RTC_Calendar
 Mcu.Pin4=PH1-OSC_OUT
+Mcu.Pin40=VP_RTC_VS_RTC_WakeUp_intern
+Mcu.Pin41=VP_SYS_VS_Systick
 Mcu.Pin5=PC0
 Mcu.Pin6=PC1
 Mcu.Pin7=PC2
 Mcu.Pin8=PC3
 Mcu.Pin9=PA1
-Mcu.PinsNb=39
+Mcu.PinsNb=42
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L053R8Tx
@@ -67,6 +71,7 @@ MxDb.Version=DB.4.0.240
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:false\:false
+NVIC.RTC_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.SVC_IRQn=true\:0\:0\:false\:false\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:true\:false\:true\:true
 PA1.Mode=SEG0
@@ -199,7 +204,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=Makefile
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_LCD_Init-LCD-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_LCD_Init-LCD-false-HAL-true,5-MX_RTC_Init-RTC-false-HAL-true
 RCC.48CLKFreq_Value=24000000
 RCC.AHBFreq_Value=2097000
 RCC.APB1Freq_Value=2097000
@@ -233,12 +238,24 @@ RCC.USART1Freq_Value=2097000
 RCC.USART2Freq_Value=2097000
 RCC.VCOOutputFreq_Value=48000000
 RCC.WatchDogFreq_Value=37000
+RTC.Date=25
+RTC.IPParameters=Month,Date,WeekDay,WakeUpClock-WakeUp,WakeUpCounter-WakeUp
+RTC.Month=RTC_MONTH_FEBRUARY
+RTC.WakeUpClock-WakeUp=RTC_WAKEUPCLOCK_CK_SPRE_16BITS
+RTC.WakeUpCounter-WakeUp=2
+RTC.WeekDay=RTC_WEEKDAY_SUNDAY
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
 USART2.BaudRate=115200
 USART2.IPParameters=VirtualMode-Asynchronous,BaudRate,WordLength
 USART2.VirtualMode-Asynchronous=VM_ASYNC
 USART2.WordLength=WORDLENGTH_8B
+VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
+VP_RTC_VS_RTC_Activate.Signal=RTC_VS_RTC_Activate
+VP_RTC_VS_RTC_Calendar.Mode=RTC_Calendar
+VP_RTC_VS_RTC_Calendar.Signal=RTC_VS_RTC_Calendar
+VP_RTC_VS_RTC_WakeUp_intern.Mode=WakeUp
+VP_RTC_VS_RTC_WakeUp_intern.Signal=RTC_VS_RTC_WakeUp_intern
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=NUCLEO-L053R8
