Changed the app to a simple clock

--- a/lcd_test_1.ioc
+++ b/lcd_test_1.ioc
@@ -239,11 +239,13 @@ RCC.USART2Freq_Value=2097000
 RCC.VCOOutputFreq_Value=48000000
 RCC.WatchDogFreq_Value=37000
 RTC.Date=25
-RTC.IPParameters=Month,Date,WeekDay,WakeUpClock-WakeUp,WakeUpCounter-WakeUp
+RTC.Hours=8
+RTC.IPParameters=Hours,Minutes,Seconds,Year,WakeUpClock-WakeUp,Month,Date
+RTC.Minutes=0
 RTC.Month=RTC_MONTH_FEBRUARY
+RTC.Seconds=0
 RTC.WakeUpClock-WakeUp=RTC_WAKEUPCLOCK_CK_SPRE_16BITS
-RTC.WakeUpCounter-WakeUp=2
-RTC.WeekDay=RTC_WEEKDAY_SUNDAY
+RTC.Year=18
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
 USART2.BaudRate=115200
